--- a/certificate.css
+++ b/certificate.css
@@ -1,44 +1,84 @@
-/* certificate.css */
-
 @page {
     size: A4 landscape;
-    margin: 10mm;
+    margin: 0;
 }
 
 body {
     margin: 0;
     padding: 0;
-    border: 1mm solid white;
-    height: 188mm;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #d6d6e4;
+    min-height: 100vh; 
+}
+
+.certificate-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.left-section {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-right: 100px;
+}
+
+.left-section form {
+    margin-bottom: 10px;
+}
+
+.generate-button {
+    background-color: #4caf50;
+    color: white;
+    padding: 10px 10px 10px 10px; 
+    border: none;
+    cursor: pointer;
+    font-size: 14px;
+    text-transform: uppercase;
+    border-radius: 10px;
+    transition: background-color 0.3s ease;
+}
+
+.generate-button:hover {
+    background-color: #45a049;
+}
+
+.certificate-preview {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 20px; 
 }
 
 .border-pattern {
-    position: absolute;
-    left: 4mm;
-    top: -6mm;
-    height: 200mm;
-    width: 267mm;
+    width: 100%;
+    max-width: 267mm;
+    height: auto;
     border: 1mm solid white;
-    background-color: #d6d6e4;
-    background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h16v2h-6v6h6v8H8v-6H2v6H0V0zm4 4h2v2H4V4zm8 8h2v2h-2v-2zm-8 0h2v2H4v-2zm8-8h2v2h-2V4z' fill='%234caf50' fill-opacity='1' fill-rule='evenodd'/%3E%3C/svg%3E");
+    background-color: white;
+    padding: 10mm;
+    box-sizing: border-box;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    position: relative;
+    overflow: hidden;
 }
 
 .content {
-    position: absolute;
-    left: 10mm;
-    top: 10mm;
-    height: 178mm;
-    width: 245mm;
+    width: 100%;
     border: 1mm solid #4caf50;
     background: white;
+    padding: 10mm;
+    box-sizing: border-box;
 }
 
 .inner-content {
-    border: 1mm solid #4caf50;
-    margin: 4mm;
-    padding: 10mm;
-    height: 148mm;
     text-align: center;
+    position: relative;
 }
 
 h1 {
@@ -65,18 +105,45 @@ h2::after {
 h3 {
     font-size: 20pt;
     margin-bottom: 0;
-    margin-top: 10mm;
+    margin-top: 0.8mm;
 }
 
 p {
     font-size: 16pt;
+    display: inline-block;
+    padding-bottom: 0.8mm;
+}
+
+#completion-date {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.download-button {
+    background-color: #2196f3;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    text-transform: uppercase;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    margin-top: 20px;
+}
+
+.download-button:hover {
+    background-color: #0b7dda;
 }
 
 .badge {
-    width: 40mm;
-    height: 40mm;
+    width: 20mm;
+    height: 20mm;
     position: absolute;
     right: 10mm;
-    bottom: 10mm;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='currentColor'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z' /%3E%3C/svg%3E");
+    bottom: 5mm;
+    background-image: url("data:image/svg+xml,%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 122.88 116.87'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:%2310a64a;fill-rule:evenodd;%7D.cls-2%7Bfill:%23fff;%7D%3C/style%3E%3C/defs%3E%3Ctitle%3Everified-symbol%3C/title%3E%3Cpolygon class='cls-1' points='61.37 8.24 80.43 0 90.88 17.79 111.15 22.32 109.15 42.85 122.88 58.43 109.2 73.87 111.15 94.55 91 99 80.43 116.87 61.51 108.62 42.45 116.87 32 99.08 11.73 94.55 13.73 74.01 0 58.43 13.68 42.99 11.73 22.32 31.88 17.87 42.45 0 61.37 8.24 61.37 8.24'/%3E%3Cpath class='cls-2' d='M37.92,65c-6.07-6.53,3.25-16.26,10-10.1,2.38,2.17,5.84,5.34,8.24,7.49L74.66,39.66C81.1,33,91.27,42.78,84.91,49.48L61.67,77.2a7.13,7.13,0,0,1-9.9.44C47.83,73.89,42.05,68.5,37.92,65Z'/%3E%3C/svg%3E");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
 }
