--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,40 @@
 /* styles.css */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+
+@font-face {
+    font-family: "Kiddos";
+    src: url("Font/kiddos.ttf");
+}
+
+#navbar {
+    overflow: hidden;
+    background-color: #1CC2CD;
+    background-size: 7%;
+    position: sticky;
+    top: 0;
+    z-index: 1000; 
+}
+#navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 10px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+#navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+#navbar a.active {
+    background-color: #1CC2CD;
+    color: white;
+}
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Patrick Hand", cursive;
     background: #4caf50;
     margin: 0;
     padding: 0;
