--- a/styles.css
+++ b/styles.css
@@ -1,68 +1,34 @@
 /* styles.css */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
-<<<<<<< Updated upstream
-@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap');
 @font-face {
     font-family: "Kiddos";
     src: url("Font/kiddos.ttf");
-}
-
-#navbar {
-    overflow: hidden;
-    background-color: #1CC2CD;
-    background-size: 7%;
-    position: sticky;
-    top: 0;
-    z-index: 1000; 
-}
-#navbar a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 10px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-#navbar a:hover {
-    background-color: #ddd;
-    color: black;
-}
-#navbar a.active {
-    background-color: #1CC2CD;
-    color: white;
-}
-
-body {
-    font-family: "Patrick Hand", cursive;
-    background: #4caf50;
-=======
-@import url('https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap');
-
+    }
+    
 /* navigation bar */
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Patrick Hand", cursive;
     text-align: center;
->>>>>>> Stashed changes
+    font-size: 20px;
     margin: 0;
     padding: 0;
-    background-color: #fdebc4;;
+    background-color: rgba(30, 130, 143, 0.212);
 }
 
 .header {
-    font-family: "Bona Nova SC", serif;
+    font-family: "Kiddos";
     font-size: 25px;
     background-color: #100029;
     color: #c8e6c9;
     text-align: left;
-    padding: 10px;
+    padding: 5px; 
 }
 
 .header p {
-    font-family: "Bona Nova SC", serif;
-    font-size: 20px;
+    font-family: "Kiddos";
+    font-size: 23px;
     text-align: left;
     color: #c8e6c9;
 }
@@ -70,13 +36,15 @@ body {
 .header img {
     float: left;
     max-width: 300px; 
-    
+    height: auto;
 }
 
 #navbar {
     overflow: hidden;
     background-color: #1CC2CD;
     background-size: 7%;
+    top: 0;
+    z-index: 1000;
 }
 
 #navbar a {
@@ -84,7 +52,7 @@ body {
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 20px 16px;
+    padding: 10px 16px;
     text-decoration: none;
     font-size: 17px;
 }
@@ -114,6 +82,7 @@ body {
 }
 
 .input-container input {
+    font-family: "Patrick Hand", cursive;
     width: 775px;
     padding: 10px;
     border: 2px solid #F2CA70;
@@ -125,9 +94,10 @@ body {
     margin: 20px auto;
     padding: 20px;
     max-width: 800px;
-    background: white;
+    background: rgba(107, 23, 79, 0.808);
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     border-radius: 8px;
+    color: #F2CA70;
 }
 
 .section h2 {
@@ -151,6 +121,7 @@ body {
     display: flex;
     justify-content: space-around;
     margin: 20px 0;
+    color: #888; 
 }
 
 .planet, .animal, .animal-sound {
@@ -196,6 +167,7 @@ body {
     cursor: move;
     text-align: center;
     width: 100px;
+    color: #888; 
 }
 
 .element {
@@ -220,7 +192,7 @@ body {
     border-radius: 8px;
     width: 200px;
     text-align: center;
-    background: white;
+    background: rgb(255, 255, 255);
 }
 
 .submit-section {
@@ -229,6 +201,7 @@ body {
 }
 
 #submit-button, #reset-button {
+    font-family: "Patrick Hand", cursive;
     margin: 10px;
     padding: 10px 20px;
     border: none;
@@ -238,6 +211,7 @@ body {
     font-size: 1em;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    background: rgba(107, 23, 79, 0.808);
 }
 
 #submit-button:hover, #reset-button:hover {
@@ -264,6 +238,7 @@ body {
 }
 
 #section-fill-blank input {
+    font-family: "Patrick Hand", cursive;
     width: 60%;
     padding: 10px;
     margin: 10px 0;
@@ -300,7 +275,7 @@ body {
     margin: 20px auto;
     padding: 20px;
     max-width: 800px;
-    background: white;
+    background: rgba(107, 23, 79, 0.808);
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     border-radius: 8px;
 }
@@ -417,11 +392,13 @@ body {
 }
 
 .age-options select {
+    font-family: "Patrick Hand", cursive;
     padding: 8px;
-    font-size: 16px;
+    font-size: 1em;
     border: 2px solid #F2CA70; 
     border-radius: 8px;
-    margin-left: 16px; 
+    margin-left: 16px;
+    color: #888; 
 }
 
 .footer {
