--- a/styles.css
+++ b/styles.css
@@ -402,9 +402,9 @@ body {
 }
 
 .footer {
+    background-color: #1CC2CD;
+    color: #fff;
+    padding: 15px;
     text-align: center;
-    margin-top: 20px;
     font-size: 15px;
-    color: #eae9e9;
-    background-color: #100029;
 }
