--- a/styles.css
+++ b/styles.css
@@ -48,20 +48,19 @@ body {
 .header {
     background-color: #360F3E;
     color: white;
-    padding: 20px 30px; 
+    padding: 20px 30px 30px 30px; 
 }
 .header h1 {
     font-size: 40px;
     font-family: "Kiddos";
-    text-align: left;
+    text-align: center;
 }
 .header p {
     font-size: 23px;
-    text-align: left;
+    text-align: center;
 }
 
 .header img {
-    float: left;
     max-width: 300px; 
     height: auto;
 }
